# yomo

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  Taskfile.yml  agent.template.yaml  app_info.go  awesome-quic.md  build.sh  cert.pem  config.template.yaml  example.yml  funcs.go  go.mod  go.sum  handler_type.go  key.pem  main_test.go  meta_data.go  metadata.go  options.go  payload.go  router.go  severless.go  sfn.go  sfn_test.go  source.go  source_test.go  todo.md  types.go  workflow.go  yomo.go  zipper.go  (+7 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  go.yml  release.yaml  release.yml
_examples/sfn-system-info/: go.mod  main.go
ai/: function_call.go  function_call_context.go  function_call_test.go  mock_context.go  model.go  openai.go  openai_test.go  register.go  sfnInvokeParmater.go
api/: context.go  memory.go  signature.go  yomo.go
api/tinygo/: context.go  handler.go
certs/: ca.pem  cert.pem  client.pem  client_key.pem  key.pem  server.pem  server_key.pem
cli/: .gitignore  LICENSE  Makefile  README.md  README_CN.md  Taskfile.yml  build.go  cli.go  cli.yml  cli_test.go  dev.go  init.go  root.go  run.go  serve.go  test.go  version.go
cli/cmd/: build.go  dev.go  init.go  run.go  serve.go  utils.go  version.go  yomo.go
cli/example/: go.mod  go.sum
cli/rx/: factory.go  main_test.go  runtime.go  stream.go  stream_operator.go  stream_operator_test.go
cli/serverless/: options.go  rx.go  serverless.go
cli/serverless/wasm/rust-crate/: Cargo.toml  README.md
cli/serverless/wasm/rust-crate/src/: lib.rs
cli/serverless/wasm/rust-crate/yomo/: Cargo.toml
cli/serverless/wasm/rust-crate/yomo/src/: lib.rs
cli/serverless/wasm/rust-crate/yomo_derive/: Cargo.toml
cli/serverless/wasm/rust-crate/yomo_derive/src/: lib.rs
cli/template/: template.go  template_test.go
cli/viper/: viper.go
cmd/yomo/: main.go
configs/: echo.go
connector/output/: client.go  client_test.go  (+2 more)
core/: app_info.go  bridge.go  client.go  client_options.go  client_test.go  client_test.go_  client_type.go  concurrent_map.go  connection.go  connection_test.go  connector.go  connector_test.go  context.go  context_test.go  context_test.go_  context_test.goo  control_stream.go  core.go  data_stream.go  data_stream_test.go  doc.go  frame_stream.go  handler_type.go  listener.go  listener_default.go  listener_test.go  meta_data.go  metadata.go  metadata_test.go  peer_stream.go  quic_listener.go  router.go  server.go  server_options.go  server_test.go  server_test.go_  server_test.goo  stream.go  stream_group.go  stream_parser.go  (+3 more)
docs/: .gitignore  README.md  docs.json  introduction.mdx  log.md  next-sitemap.config.js  next.config.js  next.config.mjs  optimizations.md  package.json  pnpm-lock.yaml  private_repo.md  quickstart.mdx  styles.css  tailwind.config.js  theme.config.js  tsconfig.json  wrangler.toml
example/: README.md  Taskfile.yaml  Taskfile.yml  app.go  config.yaml  noise.go  thermometer.go  tidy_go_mod.sh  workflow.yaml
githooks/: pre-commit
logger/: logger.go  zap.go
outconn/: client.go  doc.go
quic/: conn.go  quic-go.go  stream.go
rx/: factory.go  mock_stream.go  runtime.go  stream.go  stream_operator.go  stream_operator_test.go
scripts/: README.md  generate_ca.sh  generate_client.sh  generate_server.sh
server/: config.go  config_test.go  conn.go  dispatch.go  dispatch_test.go  doc.go  handler.go  handler_test.go  main_test.go  option.go  sender.go  sender_test.go  server.go  server_test.go
serverless/: context.go  serverless.go  signature.go
source/: client.go  client_test.go  main_test.go
src/: agent_loop.rs  auth.rs  bridge.rs  client.rs  config.rs  connector.rs  frame.rs  handshake.rs  http.rs  http_auth.rs  io.rs  lib.rs  llm_api.rs  llm_router.rs  llm_stream_mapper.rs  metadata.rs  metadata_mgr.rs  middleware.rs  model_api.rs  model_api_router.rs  model_list.rs  openai_http_mapping.rs  openai_types.rs  provider_error_notifier.rs  router.rs  serve_config.rs  serverless.rs  sfn.rs  tls.rs  tool_api.rs  tool_invoker.rs  tool_mgr.rs  trace.rs  types.rs  usage_handler.rs  utils.rs  zipper.rs
streamfn/: client.go  doc.go
streamfunction/: client.go  client_test.go  doc.go  main_test.go  rx.go  rx_test.go
test/: config.yaml  workflow.yaml  zipper.yaml
wasm/: app.go  main.go
zipper/: config.go  config_test.go  conn.go  dispatch.go  dispatch_test.go  doc.go  handler.go  handler_test.go  main_test.go  options.go  sender.go  sender_test.go  zipper.go  zipper_test.go
(+834 files in other folders)
