[package]
name = "yomo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bon = "3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
config = "0.15"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rustls-native-certs = "0.8"
rustls-pki-types = "1.14"
s2n-quic = { version = "1", features = [
    "provider-address-token-default",
    "provider-tls-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
