[package]
name = "yomo"
version = "0.1.0"
edition = "2021"
description = "The [YoMo](https://github.com/yomorun/yomo) Rust WebAssembly development sdk."
license = "Apache-2.0"
authors = ["YoMo Contributors"]
repository = "https://github.com/yomorun/yomo/cli/serverless/wasm/rust-crate"

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
