[package]
name = "yomo"
version = "0.2.0"
edition = "2021"
description = "YoMo Rust development sdk."
license = "Apache-2.0"
authors = ["YoMo Contributors"]
repository = "https://github.com/yomorun/yomo/tree/master/cli/serverless/wasm/rust-crate/yomo"

[dependencies]
yomo_derive = { version = "0.2.0" }
